  a slightly changed RPL_WHOISSECURE, namely: ':%s 671 %s %s :is using a Secure connection',
  I'm sure some client coders will bitch at this, but the current way is brok in 2 ways:
  - RPL_WHOISSPECIAL is meant for 1 line of additional whois info, usually an IRCOp title or
    description. Having a dedicated numeric for it allows for client-side interpretations
    and/or translations.
  - The 'is a Secure Connection' was incorrect English, this has been reported numerous times.
  The PRO's of this change are clear, the only CON is that in-window-/whois's are now
  likely not to show this line properly in-window but rather in the status window, until client
  coders implement this numeric.
  If you wonder why we didn't use RPL_USINGSSL, that's because this numeric collides with
  RPL_STATSDLINE (which we are already using for >5 years).
  If you wonder why we didn't use the RPL_WHOISSECURE numeric as-is (even though I haven't
  seen it in use anywhere), then that's because we wanted to minimize display problems in
  the transition period and the extra parameter would not be used by us anyway.
- If a locop now has can_override/can_gkline/can_gzline we will print out a warning and
  convert it to globops. This is also what we always did for can_globalroute/can_gkill
  (well, except the warning). Giving such NETWORK (GLOBAL) privileges to a LOCAL operator
  does not make any sense and is therefore no longer allowed.
- NickChars:
  - Added 'russian-w1251', supplied by Roman Parkin. There are like 7 standards
    in Russia (and like 2-3 main ones), so I didn't dare to call this one 'russian' ;).
  - Added 'czech-w1250' and 'slovak-w1250' (both might miss a few characters).
  - Added 'windows-1250' group which contains czech-w1250, slovak-w1250, polish-w1250
    and hungarian.
  - Hungarian characters show both fine in w1250 and latin2, hence hungarian is included
    both in 'windows-1250' and 'latin2'.
  - Fixed bug: polish was not included in latin2